--- a/style.css
+++ b/style.css
@@ -1,47 +1,28 @@
 p {
     font-family: Poppins;
-    font-size: 60px;
+    font-size: 80px;
     text-align: center;
-    background-image: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet, red);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: white;
-    animation: rainbow-animation 35s linear infinite;
-    filter: drop-shadow(10px 3px 1px #000000);
+    color:whitesmoke;
 }
-
-@keyframes rainbow-animation {
-    to {
-        background-position: 4500vh;
-    }
-}
-
 #image {
     text-align: center;
 }
-
-
-body {
-    background-image: linear-gradient(to right, rgb(24, 77, 71), rgb(150, 187, 124), rgb(250, 213, 134), rgb(198, 71, 86));
-}
-
 .topnav{
     background-color:#293462;
     overflow:hidden;
+    margin:auto;
 }
-
 .topnav a{
     float:left;
     color:#f2f2f2;
     text-align:center;
-    padding:14px 16px;
-    fontsize:17px;
+    padding:16px 20px;
+    font-size:20px;
 }
-
 .topnav a:hover{
     background-color:#ddd;
     color:black;
 }
-
 .topnav a.active{
     background-color:#04AA6D;
     color:white;
@@ -49,23 +30,59 @@ body {
 a{
     font-family:Poppins;
     filter: drop-shadow(2px 2px 2px #000000);
-    font-size:17px;
+    font-size:20px;
+    text-decoration: none;
 }
-button{
-    
-    font-size: 40px;
-    padding:20px;
+.dare{
+    width: 100px;
+    height:100px;
+    font-size: 25px;
+    padding:30px;
     border-radius:50px;
     border-style: inherit;
     margin:0 auto;
     display:block;
-    background-color:rgb(190, 53, 53);
-    color:rgb(124, 172, 13);
+    color:black;
+    transition-duration:0.1s ;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    animation: mymove 10s infinite;
+}
+.dare:hover{
+    color:yellow;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.rickroll{
+    width: 300px;
+    height:100px;
+    font-size: 25px;
+    padding:30px;
+    border-radius:25px;
+    border-style: inherit;
+    margin:0 auto;
+    display:block;
+    background-color:rgb(0, 238, 255);
+    color:black;
     transition-duration:0.1s ;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 }
-button:hover{
-    background-color:rgb(0, 0, 0);
-    color:rgb(217, 255, 0);
+.rickroll:hover{
+    background-color: rgb(51, 255, 0);
+    color:rgba(255, 0, 0, 0.699);
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+body {
+    height: 2000px;
+    background-image: linear-gradient(to right, rgb(24, 77, 71), rgb(150, 187, 124), rgb(250, 213, 134), rgb(198, 71, 86),rgb(24, 77, 71));
+    animation: rainbow-animation 300s linear infinite;
+    opacity: 80%;
+}
+
+@keyframes rainbow-animation {
+    to {
+        background-position: 3000vh;
+    }
+}
+@keyframes mymove{
+    0%{top:100px;background:rgb(0, 132, 255);width:100px;}
+    100%{top:100px;background:rgb(56, 212, 42);width:300px;}
 }
